# fluenc-language-server

./: CMakeLists.txt  LICENSE  ast_extractor.hpp  location_resolver.hpp  main.cpp  type_resolver.hpp  vcpkg.json
ports/fluenc/: disable_vcpkg.patch  portfile.cmake  vcpkg.json
ports/json-rpc-cxx/: portfile.cmake  vcpkg.json
ports/libfluenc-lang/: disable_vcpkg.patch  libfluenc-langConfig.cmake  portfile.cmake  vcpkg.json
protocol/: ClientCapabilities.h  CompletionOptions.h  Diagnostic.h  DiagnosticSeverity.h  DocumentSymbol.h  Hover.h  InitializeResult.h  Location.h  MarkupContent.h  MarkupKind.h  Position.h  PositionEncodingKind.h  Range.h  ServerCapabilities.h  ServerInfo.h  SymbolKind.h  TextDocumentContentChangeEvent.h  TextDocumentIdentifier.h  TextDocumentItem.h  TextDocumentSyncKind.h  TextDocumentSyncOptions.h  VersionedTextDocumentIdentifier.h  WorkspaceCapabilities.h  WorkspaceFolder.h  WorkspaceSymbol.h  protocol.h
